fix bug on home page heading so that copy doesnt wrap in mobile landscape

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -131,6 +131,7 @@ MAIN SECTIONS
 }
 
 .feature__heading {
+  white-space: nowrap;
   margin: 30px 0 40px;
 }
 
